# openai-assistant-wrapper

./: README.md  main.py  pyproject.toml
notebooks/: test.ipynb
